src/content/docs/v15/01-getting-started/20-installation.mdx
---
title: Installation
description: Learn how to add ngx-translate to your project.
slug: v15/getting-started/installation
---

import {Tabs, TabItem, CardGrid, LinkCard} from "@astrojs/starlight/components";
import { PackageManagers } from 'starlight-package-managers'

:::danger[This version of ngx-translate is not supported anymore]
When using an EOL (End Of Lifetime) version, you have a few options:

- **Upgrade**
Upgrade to the current version of Ngx-translate. We have worked hard to make upgrading simple. You can view our [migration guide](/v16/getting-started/migration-guide/) to assist you in your upgrade.

- **Remain Out of Date**
Continue using the outdated version, but be aware that you will be subject to security risks and bugs.

- **Commercial Support for EOL versions**
Our partner [HeroDevs](https://www.herodevs.com/support/nes-angular?utm_source=ngx-translate&utm_medium=referral&utm_campaign=angular_support_link&utm_id=NgxTranslateReferral) offers commercial security support for EOL versions of Ngx-translate.
If you cannot migrate but must remain secure you can contact them [here](https://www.herodevs.com/support/nes-angular?utm_source=ngx-translate&utm_medium=referral&utm_campaign=angular_support_link&utm_id=NgxTranslateReferral).
:::


## Compatibility with these Angular versions

Choose the version corresponding to your Angular version:

| Angular       | **@ngx-translate/core** | **@ngx-translate/http-loader** | Tutorial |
| ------------- | ------------------- | -------------------------- |--- |
| 18 - 20+ | [18.x](/) | 18.x | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 16 - 19 | [17.x](/v17/) | 17.x | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 16 - 19+ | [16.x](/v16/) | 16.x | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 16 - 19+ | 15.x+ | 8.x+ | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 13 - 15 (ivy only) | 14.x+               | 7.x+ | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 10 - 12   | 13.x+               | 6.x+  | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 9             | 12.x+               | 5.x+  | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 8             | 12.x+               | 4.x+  | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular-app-with-ngx-translate) |
| 7             | 11.x+               | 4.x+  | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular7-app-with-ngx-translate) |
| 6             | 10.x                | 3.x   | [Tutorial](https://www.codeandweb.com/babeledit/tutorials/how-to-translate-your-angular6-app-with-ngx-translate) |
| 5             | 8.x to 9.x          | 1.x to 2.x | — |
| 4.3           | 7.x or less         | 1.x to 2.x  | — |
| 2 to 4.2.x    | 7.x or less         | 0.x  | — |
## Installation of the @ngx-translate/core

Start by adding the npm module:

<PackageManagers pkg="@ngx-translate/core" />

## Standalone components or NgModule?

The installation differs a bit depending on which concept you are using in your app:

<CardGrid>
  <LinkCard title="Standalone Components" href="#using-standalone-components" description="You application has a file app.config.ts in src/app. Your components set the property 'standalone:true.'" />

  <LinkCard title="NgModule" href="#using-ngmodule" description="You application has a file app.module.ts in src/app. Your components have no 'standalone' property." />
</CardGrid>

## Using Standalone Components

### Initialising the `TranslateModule`

To use ngx-translate in your project, import `TranslateModule.forRoot()` in your `appConfig`:

~~~ts title="app.config.ts"
import {ApplicationConfig, importProvidersFrom, provideZoneChangeDetection} from "@angular/core";
import {TranslateModule} from "@ngx-translate/core";

export const appConfig: ApplicationConfig = {
  providers: [
    provideZoneChangeDetection({ eventCoalescing: true }),
    importProvidersFrom([TranslateModule.forRoot({
     defaultLanguage: 'en'
    })])
  ],
};
~~~

### Initialize the `TranslateService` for your application

In your components, add `TranslateModule` to your `imports`.  This gives you access to the
TranslateService for configuration:

```ts {2-3,8,13-17} title="app.component.ts"
import { Component } from '@angular/core';
import {TranslateModule} from "@ngx-translate/core";
import {TranslateService} from "@ngx-translate/core";

@Component({
    selector: 'app-root',
    standalone: true,
    imports: [TranslateModule],
    templateUrl: './app.component.html',
    styleUrls: ['./app.component.scss']
})
export class AppComponent {
    constructor(private translate: TranslateService) {
        this.translate.addLangs(['de', 'en']);
        this.translate.setDefaultLang('en');
        this.translate.use('en');
    }
}
```

Now, skip the next chapter:

<LinkCard title="Loading translation files" href="/getting-started/translation-files/" />

## Using NgModule

### Initialising the `TranslateModule`

To use ngx-translate in your project, import `TranslateModule.forRoot()` in the
root `NgModule` of your application.

The `forRoot()` static method provides and configures services simultaneously.
Ensure it's only called within the root module of your application, commonly
referred to as `AppModule`.

This method lets you configure the `TranslateModule` by specifying a loader,
a parser, and/or a `MissingTranslationHandler`. Additionally, you can set the
default language using `defaultLanguage`.

See the section [Translate Module API](/v15/reference/translate-module-api/) for details.

```ts {3,8-10}  title="app.module.ts"
import {BrowserModule} from '@angular/platform-browser';
import {NgModule} from '@angular/core';
import {TranslateModule} from '@ngx-translate/core';

@NgModule({
    imports: [
        BrowserModule,
        TranslateModule.forRoot({
            defaultLanguage: 'en'
        })
    ],
    bootstrap: [AppComponent]
})
export class AppModule { }
```

### Usage with SharedModules

If you use a [`SharedModule`](https://angular.dev/guide/ngmodules/sharing) that you import in multiple other feature modules,
you can export the `TranslateModule` to make sure you don't have to import it in every module.

~~~ts
@NgModule({
    exports: [
        CommonModule,
        TranslateModule
    ]
})
export class SharedModule { }
~~~

:::caution
Note: Never call a `forRoot` static method in the `SharedModule`. You might end up with different
instances of the service in your injector tree. But you can use `forChild` if necessary.
:::

### Lazy loaded modules

When you lazy load a module, you should use the `forChild` static method to import the `TranslateModule`.

Since lazy loaded modules use a different injector from the rest of your application, you can configure them
separately with a different loader/compiler/parser/missing translations handler.

To make a child module extend translations from parent modules use `extend: true`. This will cause the service to also
use translations from its parent module.

You can also isolate the service by using `isolate: true`. In which case the service is a completely isolated
instance (for translations, current lang, events, ...).
Otherwise, by default, it will share its data with other instances of the service (but you can still use a
different loader/compiler/parser/handler even if you don't isolate the service).

~~~ts
@NgModule({
    imports: [
        TranslateModule.forChild({
            loader: {provide: TranslateLoader, useClass: CustomLoader},
            compiler: {provide: TranslateCompiler, useClass: CustomCompiler},
            parser: {provide: TranslateParser, useClass: CustomParser},
            missingTranslationHandler: {provide: MissingTranslationHandler, useClass: CustomHandler},
            isolate: true
        })
    ]
})
export class LazyLoadedModule { }
```

### Initialize the `TranslateService` for your application

```ts {2,7,11-16} title="app.component.ts"
import {Component} from '@angular/core';
import {TranslateService} from '@ngx-translate/core';

@Component({
    selector: 'app',
    template: `
        <div>{{ 'app.hello' | translate:param }}</div>
    `
})
export class AppComponent {
    param = {value: 'world'};

    constructor(translate: TranslateService) {
        translate.setDefaultLang('en');
        translate.use('en');
    }
}
```

[`setDefaultLang()`](/v15/reference/translate-service-api/#setdefaultlang) sets the default language. The default language is used
as a fall-back if no translation is found in the currently selected language.
You can also do this at application startup using the `TranslateModule.forRoot({defaultLanguage:'en'})`.

[`use()`](/v15/reference/translate-service-api/#use) sets the current language for the application. If the selected language is not yet
loaded, the loader is invoked to retrieve the file.
